# homelab

./: .gitattributes  .gitignore  .prettierrc  ds.json  fnox.local.toml  fnox.toml  hk.pkl  justfile  mise.toml  pyproject.toml  readme.md  ruff.toml
android/: android.md  op_battery_whitelist.sh  op_uninstall_bloat.sh  readme.md  sam24_debloat.sh
apptainer/: img.def
bluebubbles/: bluebubbles.md  bluebubbles_start.sh  bluebubbles_stop.sh  service_install.sh
compose/: campfire.yml  deluge.yml  doplarr.yml  duplicati.yml  fnox.toml  fog.yml  healthchecks.yml  hydra.yml  invidious.yml  modmanager.yml  pumpkin.yml  readarr.yml  registry.yml  satisfactory.yml  transmission.yml  twingate.yml  ytdl.yml  zulip.yml
cudatoolkit/: cudatoolkit.md
dns/: Pulumi.yaml  __main__.py  dns.py  fnox.toml  mise.toml  pyproject.toml  readme.md
docker/: daemon.json  docker.md  (+4 more)
protonmail/: Pulumi.yaml  __main__.py  domains.json  fnox.toml  mise.toml  pyproject.toml  readme.md
rack3/: Pulumi.dev.yaml  Pulumi.yaml  config.json  fnox.local.toml  fnox.toml  longhorn.py  mise.toml  pyproject.toml  rack3.py  readme.md  tmp
rack3/app/: beszel.yml  kuma.yml  longhorn_dash.yml  whoami.yml
rack3/beszel/: beszel.yml
rack3/certmanager/: chennio.yml  issuer.yml  values.yml
rack3/longhorn_/: values.yaml
rack3/metallb_/: pool.yml
rack3/newt/: newt.yaml
rack3/newt_/: cred.env  values.yml
rack3/nvidia/: nvdp.yml
rack3/nvidia/dra/: dra.py  dra.yml
rack3/nvidia/operator/: gpu.yml  operator.py
rack3/nvidia_/: test.yml  test2.yml
rack3/ref/: ref.py
rack3/ref/ref_newt/: values.yml
rack3/ref/ref_nvidia/: nvidia.py
rack3/ref/ref_traefik/: httproute.yml  tcp.yml  tls_options.yml  traffic_canary.yml
rack3/talos/: image.yml  image_newt.yml  image_rack2.yml  image_rack3.yml
rack3/traefik_/: dash.yaml  headers.yml  values.yml
rack3/traefik_/ref/: dash_bauth.yml  le.yml  middleware.yml  traffic_mirror.yml
traefik/: pyproject.toml  readme.md
traefik/src/traefik/: data.py  gen.py  paths.py  test.py
(+1176 files in other folders)
