[project]
name = "protonmail"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "json5>=0.13.0",
    "onepassword-sdk>=0.3.2",
    "pulumi>=3.217.0",
    "pulumi-cloudflare>=6.13.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
