[project]
name = "rack3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cytoolz>=1.1.0",
    "json5>=0.13.0",
    "onepassword-sdk>=0.4.0",
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-cloudflare>=6.13.0",
    "pulumi-kubernetes>=4.27.0",
    "pulumi-kubernetes-cert-manager>=0.2.0",
    "pulumi-onepassword>=1.1.3",
    "pulumiverse-talos>=0.7.1",
]

[tool.uv.workspace]
members = [
    "src/rack3",
]
